# lab1-imagecraft

./: CMakeLists.txt
include/: bmp.h  filter.h  filter_factory.h  image.h  utils.h
include/filters/: blur.h  crop.h  edge.h  gamma.h  gs.h  hist-eg.h  med.h  neg.h  sharp.h
src/: bmp.cpp  filter_factory.cpp  image.cpp  main.cpp
src/filters/: blur.cpp  crop.cpp  edge.cpp  gamma.cpp  gs.cpp  hist_eq.cpp  med.cpp  neg.cpp  sharp.cpp
